--- a/css/individual_main.css
+++ b/css/individual_main.css
@@ -11,6 +11,9 @@ body {
 
 h1, h2, h3, h4, h5, h6, span, p { font-family: 'Raleway', sans-serif; }
 
+a{
+	text-decoration: none !important;
+}
 hr {
     display: block;
     height: 1px;
@@ -91,7 +94,7 @@ img.slide{
 .content {
 	position: static;
 	overflow: hidden;
-	margin-top: 36%;
+	margin-top: 14%;
 }
 
 .content section {
@@ -118,9 +121,9 @@ img.slide{
 	font-size: 16px;
 }
 
-.menu{
+.menu {
 	position: fixed;
-	width: 220px;
+	width: 220px; 
 	z-index: 1;
 	top: 35px;
 }
@@ -147,6 +150,7 @@ img.slide{
 #menu-list > .active > a,
 #menu-list > li > a:hover { 
     background-color: rgba(255,255,255,0.25);
+	text-decoration: none;
 }
 
 #responsive {
@@ -170,6 +174,7 @@ img.slide{
 #responsive > .active > a,
 #responsive li a:hover {
     background-color: rgba(0,0,0,0.5);
+	text-decoration: none;
 }
 
 #map-canvas {
@@ -210,12 +215,6 @@ img.slide{
 	}
 }
 
-.info-card {
-    float: left;
-	margin: 10px;
-	-webkit-perspective: 600px;
-}
-
 .front, .back {
 	background: #FFF;
 	border-radius: 10px;
@@ -227,8 +226,8 @@ img.slide{
 
 .front {
 	overflow: hidden;
-	width: 250px;
-	height: 330px;
+	width: 540px;
+	height: 300px;
 	position: absolute;
 	z-index: 1;
 }
@@ -236,25 +235,10 @@ img.slide{
 .back {
 	padding: 20px;
 	padding-top: 0px;
-	width: 250px;
-	height: 330px;
-	-webkit-transform: rotateY(-180deg);
+	width: 540px;
+	height: 300px;
 	overflow: scroll;
 }
-
-.info-card:hover .back {
-	-webkit-transform: rotateY(0);
-}
-
-.info-card:hover .front {
-	-webkit-transform: rotateY(180deg);
-}
-
-.card-image {
-width: 100%;
-height: 100%;
-}
-
 
 /* Social buttons */
 .social {
@@ -303,4 +287,171 @@ a.github {
 a.github:hover {
 	background-color: rgb(51, 51, 51) !important;
 }
-	
+
+.flip {
+  -webkit-perspective: 800;   
+          perspective: 800;
+        position: relative;
+        text-align: center;
+		float: right;
+		margin: 10px;
+}
+.flip .card.flipped {
+  -webkit-transform: rotatey(-180deg);
+          transform: rotatey(-180deg);
+}
+.flip .card {
+    width: 540px;
+    height: 300px;
+    -webkit-transform-style: preserve-3d;
+    -webkit-transition: 0.5s;
+    transform-style: preserve-3d;
+    transition: 0.5s;
+    background-color: #fff;
+	float: right;
+	position: relative;
+	margin: 10px;
+   
+}
+.flip .card .face {
+	height: inherit;
+  -webkit-backface-visibility: hidden ;
+    backface-visibility: hidden ;
+   z-index: 2;
+}
+.flip .card .front {
+   position: absolute;
+   width: inherit;
+   height: inherit;
+   z-index: 1;
+}
+.flip .card .img {
+   position: relative;
+   width: inherit;
+   height: inherit;
+   z-index: 1;
+   border: 2px solid #000;
+}
+.flip .card .back {
+  height: inherit;
+  width: inherit;
+  padding-top: 10%;
+  -webkit-transform: rotatey(-180deg);
+          transform: rotatey(-180deg);
+}
+  .inner{
+	margin:0px !important;
+  	height: inherit;
+	width: inherit;
+}
+
+.accordion{
+	color: inherit;
+	cursor: pointer;
+	width: inherit;
+	transition: 0.4s;
+}
+
+.panel{
+	padding: 0 5px;
+	background-color: rgba(255,0,0,0.50);
+	overflow:hidden;
+	max-height: 0;
+	transition: max-height 0.2s ease-out;
+	text-decoration: none;
+}
+
+.panel:hover{
+	background-color: rgba(255,0,0,0.25);
+}
+
+.panel a{
+	font-family: 'Raleway', sans-serif; 
+	font-size: 15px;
+    padding: 10px 0px 10px 0px; 
+    text-decoration: none; 
+    display: block;
+    color: #fff; 
+	text-align: center;
+}
+
+.section2{
+	background-color: rgba(255,255,255,0.5);
+	position: relative;
+	width: 87%;
+	float: right;
+	margin-left: 20px;
+}
+
+.skillbar {
+	position:relative;
+	display:block;
+	margin-bottom:15px;
+	width:100%;
+	background:#eee;
+	height:35px;
+	border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	-webkit-transition:0.4s linear;
+	-moz-transition:0.4s linear;
+	-ms-transition:0.4s linear;
+	-o-transition:0.4s linear;
+	transition:0.4s linear;
+	-webkit-transition-property:width, background-color;
+	-moz-transition-property:width, background-color;
+	-ms-transition-property:width, background-color;
+	-o-transition-property:width, background-color;
+	transition-property:width, background-color;
+}
+
+.skillbar-title {
+	position:absolute;
+	top:0;
+	left:0;
+width:110px;
+	font-weight:bold;
+	font-size:13px;
+	color:#ffffff;
+	background:#6adcfa;
+	-webkit-border-top-left-radius:3px;
+	-webkit-border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:3px;
+	-moz-border-radius-bottomleft:3px;
+	border-top-left-radius:3px;
+	border-bottom-left-radius:3px;
+}
+
+.skillbar-title span {
+	display:block;
+	background:rgba(0, 0, 0, 0.1);
+	padding:0 20px;
+	height:35px;
+	line-height:35px;
+	-webkit-border-top-left-radius:3px;
+	-webkit-border-bottom-left-radius:3px;
+	-moz-border-radius-topleft:3px;
+	-moz-border-radius-bottomleft:3px;
+	border-top-left-radius:3px;
+	border-bottom-left-radius:3px;
+}
+
+.skillbar-bar {
+	height:35px;
+	width:0px;
+	background:#6adcfa;
+	border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+}
+
+.skill-bar-percent {
+	position:absolute;
+	right:10px;
+	top:0;
+	font-size:11px;
+	height:35px;
+	line-height:35px;
+	color:#ffffff;
+	color:rgba(0, 0, 0, 0.4);
+}
